style.css
#container {
  max-width: 920px !important;
  margin: auto;
  font-size: 17px;
  color: #333;
}

.main p {
  padding: 5px 30px;
}

.title,
.subtitle {
  text-align: center;
  padding: 10px;
}

.title {
  margin-top: 20px;
  font-size: 34px;
}

.subtitle {
  font-size: 22px;
  color: #999;
}

footer {
  font-size: 14px;
  text-align: center;
  margin: 24px 0;
}

